--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
     <div class="container">
       <p>&copy; 2025 Reduana Afrin Rydi</p>
       <div class="social-links">
-        <a href="#">LinkedIn</a> |
-        <a href="#">GitHub</a>
+        <a href="https://www.linkedin.com/in/riduyana-ridy-97b30a291/" target="_blank">LinkedIn</a> |
+        <a href="https://github.com/Riduyanaaa" target="_blank">GitHub</a>
       </div>
     </div>
   </footer>
